# snowflake-opendic

./: .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yml  pyproject.toml
src/snowflake_opendic/: catalog.py  cli.py  client.py  snow_opendic.py
src/snowflake_opendic/patterns/: opendic_patterns.py
src/tests/: test_catalog.py  test_client.py
